@@ -74,9 +74,6 @@ new_incoming_peer(Pid, IP, Port) ->
 init([OurPeerId, PeerGroup, InfoHash,
       FileSystemPid, TorrentId]) when is_integer(TorrentId) ->
     process_flag(trap_exit, true),
-    dbg:p(self(), call),
-    tr:tr(etorrent_t_peer_group, sort_fastest_downloaders),
-
     {ok, Tref} = timer:send_interval(?ROUND_TIME, self(), round_tick),
     {ok, #state{ our_peer_id = OurPeerId,
 		 peer_group_sup = PeerGroup,
